--- a/NEWS.txt
+++ b/NEWS.txt
@@ -2,31 +2,52 @@ OSG News
 ========
 
 
-!!![OpenSceneGraph] 2.0 relase introduces new osgViewer, osgShadow and osgManipulator libraries, new build system, improved mulit-core, multi-GPU support.
+!!![=OpenSceneGraph=] 2.0 release improves ease-of-use and scalability, introducing new osgViewer, osgShadow and osgManipulator libraries, new build system, improved multi-core, multi-GPU support.
 
-PERTHSHIRE, Scotland - 15th June 2007  - [=OpenSceneGraph=] Professional Services announces the release of [=OpenSceneGraph=] 2.0, the industry's leading open source scene graph technology, designed to accelerate application development and improve 3D graphics performance. [=OpenSceneGraph=] 1.2, written entirely in Standard C++ and built upon [=OpenGL=], offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets a real time visualization tool which rivals established commercial scene graph toolkits in functionality and performance. [=OpenSceneGraph=] 2.0 runs on all Microsoft Windows platforms, Apple OS/X, GNU/Linux, IRIX, Solaris, HP-UX, AIX and [=FreeBSD=] operating systems.
+PERTHSHIRE, Scotland - 15th June 2007  - [=OpenSceneGraph=] Professional Services announces the release of [=OpenSceneGraph=] 2.0, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. [=OpenSceneGraph=] 2.0, written entirely in Standard C++ and built upon [=OpenGL=], offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets a real-time visualization tool which rivals established commercial scene graph toolkits in functionality and performance. [=OpenSceneGraph=] 2.0 runs on all Microsoft Windows platforms, Apple OS/X, GNU/Linux, IRIX, Solaris, HP-UX, AIX and [=FreeBSD=] operating systems.
 
 !!!Open-source development delivers industry-leading features and performance
-[=OpenSceneGraph=] 2.0 release is the culmination of 8 years work by the lead developers and the open-source community that has grown up around the project. The real-time graphics industry and academia embraced it from the very beginning, deploying it in real world applications, and actively participating in its development, testing and refinement. The end result is a high quality library with a feature set relevant to application developers' needs. Features include:
+The [=OpenSceneGraph=] 2.0 release is the culmination of 8 years of work by the lead developers and the open-source community that has grown up around the project. The real-time graphics industry and academia embraced it from the very beginning, deploying it in real-world applications, and actively participating in its development, testing and refinement. The end result is a high-quality library with a feature set relevant to application developers' needs. 
 
 The theme for the 2.0 release has been making the [=OpenSceneGraph=] easier to use, yet more flexible and powerful.
+
+Features include:
+
+* New unified build system using [[http://www.cmake.org CMake]], which simplifies the build process, automatically detecting installed dependencies and providing build configuration as well as support for a wide range of development tools.
+* New libraries:
+** osgViewer - provides native windowing support and viewer functionality that scales from a single view embedded in a window to multi-thread, multi-gpu, multi-screen viewers and can handle multiple scene graphs at one time. The new viewer architecture also provides support for novel display systems that require distortion correction, such as hemispheres and full domes as well as power-walls and caves. It replaces Producer as a windowing toolkit.
+** osgManipulator - provides a set of interactive manipulators for scaling, rotating and moving objects in the scene.
+** osgShadow - provides an extensible framework for adding dynamic shadows to your scene.
+* New low-level extensible intersection framework that includes support for line, plane and polytope intersections.
+* New high-level intersection classes that support paged databases, [=LineOfSight=], [=HeightAboveTerrain=] and [=ElevationSlice=].
+* View-dependent overlay - provides ability to overlay text, country boundaries etc. directly on to terrain, even paged databases.
+* Plugins
+** Improvements to the [=OpenFlight=], COLLADA, [=AC3D=], DDS plugins and many more
+** New TXF texture font reader.
+** New [=VRML2=] reader (using the [=OpenVRML=] library).
+* Easier 3rd party windowing integration 
+** With examples showing integration with GLUT, SDL, Qt, [=WxWidgets=] and MFC
+* External dependencies removed simplifying build and distribution
+** [=OpenThreads=] is moved into the core of [=OpenSceneGraph=] and is no longer an external dependency
+** Thanks to the integration of windowing support in osgViewer, [=Producer=] is no longer a dependency.
+
   
 !!!Downloads and Licensing
 [=OpenSceneGraph=] is open-source so full source code is provided, and can be copied, modified and used free of charge for commercial and non-commercial use. Access to the source allows end users greater flexibility in how they develop, debug and deploy their applications.  They gain productivity and freedom by being able to leverage the tool chain in accordance with their own release cycles. Downloads of binaries and source can be found in the [[http://www.openscenegraph.com/osgwiki/pmwiki.php/Downloads/Downloads Downloads]] section of the openscenegraph.org website.
 
-[=OpenSceneGraph=] is released under the [[http://www.openscenegraph.com/osgwiki/pmwiki.php/Legal/Legal [=OpenSceneGraph=] Public License]], which is based on the Lesser GNU Public License (LGPL), permitting the software to be used free of charge across the full spectrum of commercial and open source applications.  Furthermore, it allows both static and dynamic linking of the [=OpenSceneGraph=] libraries without restricting the licensing of the user's software. 
+[=OpenSceneGraph=] is released under the [[http://www.openscenegraph.com/osgwiki/pmwiki.php/Legal/Legal [=OpenSceneGraph=] Public License]], which is based on the Lesser GNU Public License (LGPL), permitting the software to be used free of charge across the full spectrum of commercial and open-source applications.  Furthermore, it allows both static and dynamic linking of the [=OpenSceneGraph=] libraries without restricting the licensing of the user's software. 
 
-!!!OpenSceneGraph Books now available!
+!!![=OpenSceneGraph=] Books now available!
 
-See http:://www.osgbooks.org
+See %newwin%[[http:://www.osgbooks.com OsgBooks]]
 
 !!!Professional support and services
-[=OpenSceneGraph=] project is backed up with professional services by [=OpenSceneGraph=] Professional Services, based in Scotland, and Skew-Matrix and Blue-Newt both based in the USA.
+[=OpenSceneGraph=] project is backed up with professional services by %newwin%[[http://openscenegraph.com [=OpenSceneGraph=] Professional Services]], based in Scotland, and [[http://www.skew-matrix.com Skew-Matrix]] and [[http://www.blue-newt.com Blue-Newt Software]] both based in the USA.
 
 * Confidential Professional Support
 * Bespoke development
 * Consultancy 
-* Training  
+* Training    
 
 !!!Community support and contributions
 The diverse and growing community of over 1700 developers is centered around the public osg-users mailing list, where members discuss how best to use [=OpenSceneGraph=], provide mutual support, and coordinate development of new features and bug fixes. Members of this community come from many different countries with backgrounds ranging from some of the world's largest aerospace companies, game companies, and visual simulation specialists to university researchers, students and hobbyists. 
