Added preliminary press release

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,60 @@
 OSG News
 ========
 
+= OpenSceneGraph 2.2 release improves support for advanced displays, soft and parallel split shadow maps and easier builds =
+
+PERTHSHIRE, Scotland - 4th October 2007  - !OpenSceneGraph Professional Services announces the release of !OpenSceneGraph 2.2, the industry's leading open-source scene graph technology, designed to accelerate application development and improve 3D graphics performance. !OpenSceneGraph 2.2 written entirely in Standard C++ and built upon !OpenGL, offers developers working in the visual simulation, game development, virtual reality, scientific visualization and modeling markets - a real-time visualization tool which eclipses commercial scene graph toolkits in functionality, stability and performance. !OpenSceneGraph 2.2 runs on all Microsoft Windows platforms, Apple OS/X, GNU/Linux, IRIX, Solaris, HP-UX, AIX and !FreeBSD operating systems.
+
+=== Open-source development delivers industry-leading features and performance ===
+The !OpenSceneGraph 2.2 release is the culmination of 8 years of work by the lead developers and the open-source community that has grown up around the project. The real-time graphics industry and academia embraced it from the very beginning, deploying it in real-world applications, and actively participating in its development, testing and refinement. The end result is a high-quality library with a feature set relevant to application developers' needs. 
+
+=== Updates include: ===
+
+ * Improved build support under Windows including versioning of dll's to avoid problems with mixing !OpenSceneGraph versions on a single system.
+ * Support for spherical displays.
+ * Support for checkerboard stereo displays.
+ * Soft Shadows and Parallel Split Shadow Maps now supported.
+ * Viewer configuration file support
+ * Writer support for Inventor, OBJ 3D formats
+ * Writer support for HDR imagery
+ * Viewer Configuration file support
+ * Unification of threading models and viewer event handlers so that all now work for both Viewer and !CompositeViewer classes.
+ * GDAL plugin for support for a wide range of geospatial imagery and digital elevation maps formats.
+ * A wide range of build and bug fixes.
+  
+=== Downloads and Licensing ===
+!OpenSceneGraph is open-source so full source code is provided, and can be copied, modified and used free of charge for commercial and non-commercial use. Access to the source allows end users greater flexibility in how they develop, debug and deploy their applications.  They gain productivity and freedom by being able to leverage the tool chain in accordance with their own release cycles. Downloads of binaries and source can be found in the [http://www.openscenegraph.org/projects/osg/wiki/Downloads Downloads] section of the openscenegraph.org website. [Downloads Downloads]
+
+!OpenSceneGraph is released under the [http://www.openscenegraph.org/projects/osg/wiki/Legal OpenSceneGraph Public License], which is based on the Lesser GNU Public License (LGPL), permitting the software to be used free of charge across the full spectrum of commercial and open-source applications.  Furthermore, it allows both static and dynamic linking of the !OpenSceneGraph libraries without restricting the licensing of the user's software. 
+
+=== !OpenSceneGraph Books now available ===
+
+The !OpenSceneGraph Quick Start Guide is now available in Chinese as well as English, and alongside the Reference Manual books can be found at [http://www.osgbooks.com OsgBooks].
+
+=== Professional support and services ===
+!OpenSceneGraph project is backed up with professional services by [http://openscenegraph.com OpenSceneGraph Professional Services], based in Scotland, and [http://www.skew-matrix.com Skew-Matrix] and [http://www.blue-newt.com Blue-Newt Software] both based in the USA.
+
+ * Confidential Professional Support
+ * Bespoke development
+ * Consultancy 
+ * Training    
+
+=== Community support and contributions ===
+The diverse and growing community of over 1700 developers is centered around the public osg-users mailing list, where members discuss how best to use !OpenSceneGraph, provide mutual support, and coordinate development of new features and bug fixes. Members of this community come from many different countries with backgrounds ranging from some of the world's largest aerospace companies, game companies, and visual simulation specialists to university researchers, students and hobbyists. 
+
+The !OpenSceneGraph project owes a great deal to the community for its development and support, in particular we wish to thank the [http://www.openscenegraph.org/projects/osg/wiki/Support/Contributors/TwoPointTwo 282 individuals] from around the world that have directly contributed to the development and refinement of the !OpenSceneGraph code base. 
+
+----
+
+About !OpenSceneGraph:[[BR]]
+Further information, screenshots, downloads, documentation, and support links can be found on the [=OpenSceneGraph=] project website http://www.openscenegraph.org.
+
+About !OpenSceneGraph Professional Services:[[BR]]
+!OpenSceneGraph Professional Services, founded by Robert Osfield in April 2001, is based in Callander, Perhshire, Scotland, and provides professional services on top of !OpenSceneGraph. Further information about the services it provides can be found at http://www.openscenegraph.com .
+
+
+--------------------------------------------------------------------------------
+
 
 !!![=OpenSceneGraph=] 2.0 release improves ease-of-use and scalability, introducing new osgViewer, osgShadow and osgManipulator libraries, new build system, improved multi-core, multi-GPU support.
 
@@ -56,6 +110,8 @@ The [=OpenSceneGraph=] project owes a great deal to the community for its develo
 
 Robert Osfield\\
 Project Lead and Proprietor [=OpenSceneGraph=] Professional Services
+
+--------------------------------------------------------------------------------
 
 
 !!![=OpenSceneGraph=] 1.2 release introduces Windows 64bit and AIX support, COLLADA support, processor affinity and texture atlas builder.
